<resources>
    <string name="app_name">Health Care</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter username</string>
    <string name="email">Email</string>
    <string name="enter_email">Enter email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter password</string>
    <string name="already_registered">Already registered?"\n" Click here to login</string>
    <string name="register_button">Register user</string>
    <string name="login_button">Login</string>
    <string name="profile">Profile</string>
    <string name="menu_add">Add Measurement</string>
    <string name="weight">Weight</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_diastole">Pressure Diastole</string>
    <string name="pressure_systole">Pressure Systole</string>
    <string name="pulse">Pulse</string>
    <string name="food">Food:</string>
    <string name="other_info">Other info</string>
    <string name="glucose">Glucose</string>
</resources>