<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light">

    <TextView
        android:id="@+id/text_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pressure Measurement"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/pressure_diastole_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_weight"
        android:layout_marginTop="20dp"
        android:hint="@string/pressure_diastole"
        />

    <EditText
        android:id="@+id/pressure_systole_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pressure_diastole_input"
        android:hint="@string/pressure_systole"
        />

    <EditText
        android:id="@+id/pulse_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pressure_systole_input"
        android:hint="@string/pulse"
        />

    <Switch
        android:id="@+id/switch_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pulse_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="Use the current date and time" />

    <EditText
        android:id="@+id/date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_date"
        android:hint="Date (format: YYYY-MM-DD)"
        />

    <EditText
        android:id="@+id/time_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/date_input"
        android:hint="Time (format: HH:MM)"
        />

    <TextView
        android:id="@+id/text_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:layout_marginTop="20dp"
        android:layout_below="@id/time_input"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="20dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/text_food">

        <RadioButton
            android:id="@+id/bf_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Before eating"/>

        <RadioButton
            android:id="@+id/af_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="After eating" />

        <RadioButton
            android:id="@+id/oaes_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:text="On an empty stomach"/>

    </RadioGroup>

    <EditText
        android:id="@+id/other_info_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:hint="@string/other_info"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_add"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/other_info_input" />



</RelativeLayout>