<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="HEALTH CARE"/>

    <TextView
        android:id="@+id/measurements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:text="Measurements: "
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="20dp"
        android:layout_alignTop="@+id/add_weight"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/add_weight"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_add"
        android:layout_below="@id/measurements"
        android:layout_toLeftOf="@id/weight_history"/>

    <Button
        android:id="@+id/weight_history"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_history"
        android:layout_below="@id/measurements"
        android:layout_alignParentRight="true"/>


    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_alignTop="@+id/add_temp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/add_temp"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_add"
        android:layout_below="@id/add_weight"
        android:layout_toLeftOf="@id/temp_history"/>

    <Button
        android:id="@+id/temp_history"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_history"
        android:layout_below="@id/weight_history"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_alignTop="@+id/add_pressure"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/add_pressure"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_add"
        android:layout_below="@id/add_temp"
        android:layout_toLeftOf="@id/temp_history"/>

    <Button
        android:id="@+id/pressure_history"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_history"
        android:layout_below="@id/temp_history"
        android:layout_alignParentRight="true"/>

    <TextView
        android:id="@+id/glucose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glucose"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/add_glucose"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/add_glucose"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_add"
        android:layout_below="@id/add_pressure"
        android:layout_toLeftOf="@id/temp_history"/>

    <Button
        android:id="@+id/glucose_history"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_history"
        android:layout_below="@id/pressure_history"
        android:layout_alignParentRight="true"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/glucose"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/reminder_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="Reminder"/>

        <Button
            android:id="@+id/bmi_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="BMI"
            android:textSize="40dp"
            android:layout_toRightOf="@+id/reminder_button"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/profile_button"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="PROFILE"
            android:layout_toRightOf="@+id/bmi_button"
            android:layout_marginLeft="10dp"/>

    </RelativeLayout>

</RelativeLayout>